<resources>
    <string name="app_name">Healthify</string>

    <string name="splash_network_is_not_available_title">Network is not available!</string>

    <string name="splash_network_is_not_available_message">Unfortunately, you don\'t have network
        connection, try later.
    </string>
    <string name="sign_in">Sign In</string>
    <string name="sign_in_mail">E-Mail</string>
    <string name="sign_in_mail_hint">mail@gmail.com</string>
    <string name="sign_in_password">Password</string>
    <string name="sign_in_password_hint">******</string>
    <string name="sign_in_recover_password">Recover password</string>
    <string name="sign_in_result_not_found">There was error while getting user data. Try later!</string>
    <string name="sign_in_incorrect_credentials">Incorrect credentials!</string>
    <string name="sign_in_user_not_found">User not found!</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_confirm_password">Confirm password</string>
    <string name="sign_up_error_while_signing_up">There was error while in sign up process. Try later!</string>
    <string name="onboarding">Onboarding</string>
    <string name="onboarding_back">Back</string>
    <string name="onboarding_next">Next</string>
    <string name="onboarding_first_name_title">What\'s your first name?</string>
    <string name="onboarding_first_name_description">We want to know your first name to refer in the application.</string>
    <string name="onboarding_last_name_title">What\'s your last name?</string>
    <string name="onboarding_last_name_description">We want to know your last name to refer in the application.</string>
    <string name="onboarding_age_title">What\'s your age?</string>
    <string name="onboarding_age_description">We want to know your age to better serve you.</string>
    <string name="onboarding_weight_title">What\'s your weight?</string>
    <string name="onboarding_weight_description">We want to know your weight, so you later could track it.</string>
    <string name="onboarding_target_weight_title">What\'s your target weight?</string>
    <string name="onboarding_target_weight_description">Your BMI is %s. You are %s</string>
    <string name="onboarding_height_title">What\'s your height?</string>
    <string name="onboarding_height_description">We want to know your height, so you later could track it.</string>
    <string name="onboarding_profile_picture_title">Do you want to set up your profile picture?</string>
    <string name="onboarding_profile_picture_description">You can leave it blank, and set up it later.</string>
    <string name="onboarding_first_name_hint">First name</string>
    <string name="onboarding_last_name_hint">Last name</string>
    <string name="onboarding_profile_picture_hint">Picture URL</string>
    <string name="component_yes">Yes</string>
    <string name="component_no">No</string>
    <string name="component_close">Close</string>
    <string name="components_error">Error</string>
    <string name="components_success">Success</string>
    <string name="components_fill_all_the_fields">To continue, please fill all the fields!</string>
    <string name="components_weight_underweight">Underweight</string>
    <string name="components_weight_normal">Normal weight</string>
    <string name="components_weight_overweight">Overweight</string>
    <string name="components_weight_obese">Obese</string>
    <string name="components_weight_extremely_obese">Extremely Obese</string>
    <string name="profile_profile">Profile</string>
    <string name="profile_change_password">Change password</string>
    <string name="profile_statistics">Statistics</string>
    <string name="password_reset">Password reset</string>
    <string name="kg">kg</string>
    <string name="update_profile_picture">Update profile picture</string>
    <string name="log_out">Log out</string>
    <string name="change_password">Change password</string>
    <string name="old_password">Old password</string>
    <string name="confirm_old_password">Confirm old password</string>
    <string name="new_password">New password</string>
    <string name="enter_email">Enter email</string>
    <string name="statistics">Statistics</string>
</resources>